--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "next": "14.2.13",
     "next-swagger-doc": "^0.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
